<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_layout_detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
